test/files/neg/t6476.check
t6476.scala:3: error: unclosed string literal
  s"$"
    ^
one error found
